==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.15.0 Mar 27 2015
. (kfsone) Maddavo Plugin
   - Added support for "corrections"
     "--opt=corrections" and "--opt=csvs" will read Maddavo's correction data
     correction data is read first and is applied to existing data,
   - Support for Category, Item, System, Station, Ship, ShipVendor and
     RareItem name changes and deletions,
   - System, Item and Station deletions can be very slow if there are prices
     in the database, be patient,
   - "--opt=csvs" now also enables "exportcsvs"
   - "--opt=exportcsvs" not exports 
API:
. (kfsone) transfers.CSVStream will give a line-by-line report of utf-8
     decode errors but continue streaming.

v6.14.6 Mar 25 2015
. (kfsone) Item names in .price files are now case insensitive (Ai Relics)
+ Over 100 systems

v6.14.5 Mar 23 2015
. (kfsone) Solved the missing 6.14.3 commits

v6.14.4 Mar 22 2015
. (gazelle) Bernd's "getsation.sh" script (see scripts/README.txt)
. (kfsone) Fixed #209 Exception when you couldn't afford something,
. (kfsone) Fixed #210 Exception when --from not reached,
. (kfsone) Added "Salvage" Category,
. (kfsone) Added "AI Relics" and "Antiquities" Items,
 - You will want to "trade.py buildcache -f -i"

v6.14.3 Mar 17 2015
. (kfsone) Windows improvements to misc/madupload.py,
. (kfsone) EDDB v3 support,
. (kfsone) "--towards" should be much better behaved

v6.14.2 Mar 15 2015
. (kfsone) Minor tweaks
. (kfsone) Removed the "tradingWith" cache because its hit rate was so low
           it was actually decreasing performance
. (kfsone) Tweaked how --prune and --max-routes interact
. (kfsone) Little performance boost

v6.14.1 Mar 13 2015
. (kfsone) Minor fixes
. (kfsone) Derp defense,
. (kfsone) Added misc.importeddbstats
. (kfsone) Imported Station attributes from eddb,